# mae7752_project

./: .gitignore  .gitmodules  README.md  needed_repos.repos  rviz_config.rviz
avoid_plan_msgs/: CMakeLists.txt  package.xml
avoid_plan_msgs/srv/: MakePlan.srv
avoidance_planner/: package.xml  setup.cfg
avoidance_planner/avoidance_planner/: planner.py
avoidance_planner/avoidance_planner/trajectory/: constants.py  functions.py  helpers.py  trajectory.py
moveit_planner_connector/: package.xml
moveit_planner_connector/config/: ur5_config.yaml
moveit_planner_connector/launch/: ur_control.launch.py  ur_moveit.launch.py
moveit_planner_connector/src/: ik_exec.cpp
src/avoidance_planner/: package.xml  setup.py
src/avoidance_planner/avoidance_planner/: planner.py
src/avoidance_planner/avoidance_planner/trajectory/: constants.py  functions.py  helpers.py  trajectory.py
src/moveit_planner_connector/: CMakeLists.txt
src/moveit_planner_connector/launch/: ur5e.launch.py  ur_moveit.launch.py
src/moveit_planner_connector/src/: ik_exec.cpp
trajectory/: constants.py  helpers.py  trajectory.py
